fix figcaption mobile

--- a/app/assets/stylesheets/extranet/pages/_posts.sass
+++ b/app/assets/stylesheets/extranet/pages/_posts.sass
@@ -11,15 +11,20 @@
         z-index: 10
         &::before
             content: '©'
-            padding: calc(1rem/2)
+            padding: 0.5rem
+            padding-right: 0
             position: absolute
             right: 0
             top: 0
         p
             display: none
             font-weight: 400
-            padding: calc(1rem/2)
-            padding-right: 1.5rem
+            padding: 0.5rem
+            padding-right: 1rem
+        a
+            text-decoration: underline
     &:hover figcaption p
         display: block
-                        
+    @include media-breakpoint-down(md)
+        figcaption p 
+            display: block
